examples/invalid/09_struct_update_spread.lane
module Examples.Invalid09
// invalid: struct spread and copy update are not supported in v1
pub struct Point {
  x : Int
  y : Int
}

pub let point : Point = Point::{ x: 1, y: 2 }
pub let moved : Point = Point::{ ..point, x: 3 }
